--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,3 +41,5 @@ jobs:
           command: |
             . venv/bin/activate
             make lint
+      - store_test_results:
+          path: test-results
