--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@ itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
 numpy==1.17.2
-pandas
+pandas==1.0.3
 python-dateutil==2.8.0
 pytz==2019.3
 scikit-learn==0.20.3
 scipy==1.3.1
 six==1.12.0
 Werkzeug==0.16.0
-pylint
+pylint==2.5.0
